--- a/src/views/SexualReproductiveHealth/triage.less
+++ b/src/views/SexualReproductiveHealth/triage.less
@@ -4,14 +4,17 @@
 
   .li {
     width: 42%;
+
     img {
       width: 70%;
       margin: 0 auto;
     }
-    .main-card{
+
+    .main-card {
       height: 37.25rem;
 
     }
+
     .main-card-tit {
       font-size: 22px;
     }
@@ -29,4 +32,8 @@
       margin-left: 20px;
     }
   }
+}
+
+.flex {
+  display: flex;
 }
