第一个流程通了

--- a/src/style.less
+++ b/src/style.less
@@ -75,7 +75,7 @@
 }
 
 .size-btn {
-  
+
   font-size: 30px;
   color: #0F296D;
   font-family: 'MyCustomFont';
@@ -86,4 +86,11 @@
 
 .size-btn:hover {
   transform: scale(1.3);
+}
+.zigzag-card {
+  width: 70%;
+}
+
+.zigzag-card:nth-child(even) {
+  float: right
 }
