--- a/src/views/SexualReproductiveHealth/triage.less
+++ b/src/views/SexualReproductiveHealth/triage.less
@@ -37,3 +37,28 @@
 .flex {
   display: flex;
 }
+
+.small-card {
+  margin-bottom: 30px;
+
+  img {
+    height: 200px;
+  }
+
+  ul {
+    margin-left: 30px;
+
+    li {
+      margin-bottom: 10px;
+      font-size: 20px;
+      font-family: cursive;
+    }
+
+    li:last-child {
+      margin-bottom: -10px;
+    }
+  }
+}
+.zigzag-card:nth-child(odd) {
+  background-color: rgba(255, 97, 97, 0.264);
+}
