--- a/src/views/SexualReproductiveHealth/triage.less
+++ b/src/views/SexualReproductiveHealth/triage.less
@@ -62,3 +62,8 @@
 .zigzag-card:nth-child(odd) {
   background-color: rgba(255, 97, 97, 0.264);
 }
+.item-center{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
