--- a/src/style.less
+++ b/src/style.less
@@ -62,7 +62,8 @@
 .description-list {
   list-style-type: disc;
   margin-left: 20px;
-  font-size: 22px;
+  font-size: 30px;
+  font-family: 'MyCustomFont';
 }
 
 .main-btn {
